crates/ox-cli/src/snapshots/ox_cli__view_render__tests__renders_banner_info.snap
---
source: crates/ox-cli/src/view_render.rs
expression: out
---
┌────────────────────────────┐
│saved                       │
└────────────────────────────┘
