crates/ox-cli/src/snapshots/ox_cli__view_render__tests__renders_form_with_focused_field.snap
---
source: crates/ox-cli/src/view_render.rs
expression: out
---
┌provider──────────────────────────────────────────────────┐
│endpoint: https://api.example.com  HTTPS URL              │
│api_key: ••••••  required                                 │
│                                                          │
└──────────────────────────────────────────────────────────┘
