crates/ox-cli/src/snapshots/ox_cli__view_render__tests__renders_list_with_title_and_selection.snap
---
source: crates/ox-cli/src/view_render.rs
expression: out
---
┌accounts────────────────────┐
│personal [default]          │
│  anthropic                 │
│work                        │
│  openai                    │
└────────────────────────────┘
