crates/ox-cli/src/snapshots/ox_cli__view_render__tests__renders_modal_centered_over_background.snap
---
source: crates/ox-cli/src/view_render.rs
expression: out
---
status
┌items─────────────────────────────────┐
│alpha                                 │
│       ┌edit──────────────────┐       │
│       │name: personal        │       │
│       │                      │       │
│       │                      │       │
│       │                      │       │
│       └──────────────────────┘       │
│                                      │
│                                      │
└──────────────────────────────────────┘
