crates/ox-cli/src/snapshots/ox_cli__view_render__tests__renders_status_block_with_scroll_offset.snap
---
source: crates/ox-cli/src/view_render.rs
expression: out
---
┌log───────────────┐
│line 3            │
│line 4            │
│line 5            │
└──────────────────┘
